# konkerwerks

./: .gitignore  Dockerfile  PROMPT.md  README.md  ccworks  docker-compose.yml  kkw  pyproject.toml  ralph.yml  raw_concur.html  run.sh
.github/workflows/: ci.yml
.pi/extensions/: concur.ts
.ralph/: current-events  current-loop-id  events-20260703-104641.jsonl  events-20260704-013456.jsonl  history.jsonl
scratch/: absolute_final_justification_fix.py  absolute_sledgehammer_fix.py  audit_rows.py  brute_force_dropdown.py  button_dump_update.py  capture_raw.py  debug_deep_fields.py  debug_header_ui.py  debug_rows.py  deep_pane_dump.py  diagnose_index_3.py  diagnostic_list.py  dom_force_justification.py  dump_detail_pane.py  final_attempt_modern.py  final_definitive_update.py  final_justification_fix.py  final_raw_check.py  final_suggestion_click.py  final_toolbar_update.py  final_truth_check.py  final_visual_proof.py  index_based_justification_fix.py  isolated_sledgehammer_fix.py  keyboard_only_update.py  label_click_type_fix.py  modern_update.py  overkill_update.py  page_with_details.html  popover_click_update.py  precise_id_update.py  robust_update.py  save_button_audit.py  save_expense_fix.py  side_pane_precise_update.py  slow_update.py  stupid_update_final.py  surgical_justification_fix.py  surgical_update.py  truth_check_update.py  (+6 more)
src/: browser_client.py  cli.py
tests/: mock_concur_server.py  smoke_test_receipts.py  smoke_test_reports.py  test_allocations_crud.py  test_browser_smoke.py  test_client.py  test_justification.py  test_transaction_fields_crud.py
(+11 files in other folders)
